mi-cv-terminado

--- a/00-Intro-GIT-HTML-CSS/03. HTML/miprimerpaginaweb.html
+++ b/00-Intro-GIT-HTML-CSS/03. HTML/miprimerpaginaweb.html
@@ -6,6 +6,7 @@
     </head>
 
 <body>
+    <center>
 <div class="divClass">
     <h1>DAYANNA MENDOZA</h1>
     <h3>HENRY</h3>
@@ -25,8 +26,10 @@
     </ul>
 </div>
 
+    </center>
 </body>
 </br>
-<footer>Disfruta saludable</footer>
+<footer><center>Disfruta Saludable</center></footer>
+<footer><center>Copyright © 2021 | Desarrollado Por Dayanna Mendoza</center></footer>
 </br>
 </html>
